<resources>
    <string name="app_name">CorrectCandidate</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="action_sign_in_short">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="forgot_password_btn_text">Forgot Password?</string>
    <string name="login_btn_text">Sign in</string>
    <string name="quick_access_with_text">Quick access with:</string>
    <string name="sign_up_btn_text">Create Account</string>
    <string name="sign_up_btn_text_two">Sign Up</string>
    <string name="facebook">Facebook</string>
    <string name="phone_number_btn_text">Phone Number</string>
    <string name="reset_password_btn_text">Reset</string>
    <string name="welcome_text">Welcome</string>
    <string name="sign_in_to_continue_text">Sign in to continue!</string>
    <string name="create_account_text">Create Account</string>
    <string name="sign_up_to_join_text">Get the best and be the best!</string>
    <string name="email_validator_error_text">Please enter a valid email.</string>
    <string name="password_validator_error_text">Password must be 8 characters long.</string>
    <string name="home_bottom_nav_title">Home</string>
    <string name="my_past_questions_bottom_nav_title">My PQs</string>
    <string name="dashboard_bottom_nav_title">Dashboard</string>
    <string name="title_activity_bottom">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="test_invites_bottom_nav_title">Test Invites</string>
    <string name="profile_completion_label_text">Profile Completion: %1$s%</string>
    <string name="go_to_profile_btn_text">Go to profile</string>
    <string name="complete_profile_hint">Hint: Complete your profile so that recruiters can get to know you better.</string>
    <string name="scores_title_label">Scores</string>
    <string name="profile_complete_title_label">Profile Completion</string>
    <string name="view_details_btn_text">View Details</string>
    <string name="question_title_label">Title:</string>
    <string name="add_new_test_title">New Aptitude Test</string>
    <string name="total_number_of_questions_label">Total number of questions:</string>
    <string name="number_of_sections_label">Number of sections:</string>
    <string name="pq_pack_description_label">Description: </string>
    <string name="pq_pack_description_hint">For example: This is the Aptitude test for the ongoing Shell Graduate Trainee Programme. There are 3 (maths, english, abstract) sections with 50 questions in total to be answered in 120 minutes.</string>
    <string name="time_allocated_label">Time allocated(minutes):</string>
    <string name="artwork_url_label">Artwork URL:</string>
    <string name="cancel_btn_text">Cancel</string>
    <string name="done_btn_text">Done</string>
    <string name="upload_artwork_btn_text">Upload Artwork</string>
    <string name="hint_title">Hint: The title for the question pack. It must be at least 10 chars long. Keep it short and concise e.g Shell GT Aptitude Test.</string>
    <string name="artwork_hint">Hint: The artwork could be the organization\'s logo or an image with the title of this question pack on it. It cannot be empty and you can upload from your device.</string>
    <string name="sections_hint">Hint: The number of sections in the question pack and must not be less than 1 e.g Maths, English, Abstract = 3.</string>
    <string name="prompt_company_name">Company Name</string>
    <string name="time_allocated_hint">Hint: The time allowed for candidates to finish the test and must not be less than 10 minutes. This will be shown as countdown on candidate\'s screen.</string>
    <string name="next_btn_text">Next</string>
    <string name="number_of_questions_hint">Hint: This is the total number of questions from each section added together. It must be not be less than 5.</string>
    <string name="description_hint">Hint: The description contains more information about the question pack. It must be at least 100 chars long.</string>
    <string name="prompt_company_about_us">Company About Us</string>
    <string name="upload_logo_btn_text">Upload Logo</string>
    <string name="password_length_prompt">Password must be 8 chars long.</string>
    <string name="finish_up_btn_text">Finish Up</string>
    <string name="brand_awareness_text">Let candidates know about your brand.</string>
    <string name="almost_done_text">Almost Ready!</string>
    <string name="email_verification_dialog_title">Email Verification</string>
    <string name="email_verification_prompt_text">A verification email was sent to %1$s. Please verify to be able to login.</string>
    <string name="continue_btn_text">Continue</string>
    <string name="i_ve_verified_my_email_btn_text">I have verified my email</string>
    <string name="resend_verification_email_btn_text">Resend verification</string>
    <string name="verify_me_btn_text">Resend mail</string>
    <string name="email_re_verification_prompt">A verification mail was sent. Please verify your email before you can login. If you did not receive a mail, click the resend</string>
    <string name="sign_up_success_text">Thank you! for signing up. Please login to start using the app</string>
    <string name="ok_btn_text">OK</string>
    <string name="not_registered_prompt">Don\'t have an account?</string>
    <string name="registered_prompt">Already a user?</string>
    <string name="sign_in_btn_text">Sign In</string>
    <string name="title_text_who_are_you">Who Are You?</string>
    <string name="title_sub_text_who_are_you">Get the best experience as we serve you the right content.</string>
    <string name="candidate_usertype_label">Candidate</string>
    <string name="recruiter_usertype_label">Recruiter</string>
    <string name="candidate_description_text">You\'re seeking the best resources to get you prepared for a job aptitude test, certification, promotional, government, or scholarship exams etc.</string>
    <string name="recruiter_description_text">You\'re looking for the best candidate(s) to fill a role and you want to screen-out candidates through aptitude tests and video interviews.</string>
    <string name="prompt_title">Title:</string>
    <string name="add_btn_text">+</string>
    <string name="add_sections_prompt">Sections (maths, english etc)</string>
    <string name="test_duration_prompt">Duration</string>
    <string name="prompt_hrs">Hours</string>
    <string name="prompt_min">Minutes</string>
    <string name="section_names_hint_text">Type in the name of each section accordingly, and click the + icon to add.</string>
    <string name="time_allocated_hint_text">This will be the total time allocated for candidates to finish the aptitude test.</string>
    <string name="prompt_short_description">Short Description</string>
    <string name="new_aptitude_test_fab_image_description">New Aptitude Test</string>
    <string name="preview_text_btn">Preview</string>
    <string name="logo_color_as_bg_prompt">Use company logo color as background cover</string>
    <string name="contain_attachment_switch">This test will contain tables, charts, graphs, media etc.</string>
    <string name="background_cover_artwork_title">Background Cover/Artwork</string>
    <string name="choose_from_device_btn_text">Choose from device</string>
    <string name="basic_details_title">Basic Details</string>
    <string name="get_image_btn_text">Get It</string>
    <string name="skip_btn_text">Skip this</string>
    <string name="upload_progress_text">%1$s%2$s</string>
    <string name="other_details_title">Other Details</string>
    <string name="test_privacy_prompt">Only invited candidates can take this test</string>
    <string name="create_test_btn_text">Create New Test</string>
</resources>