<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/root"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.dialogs.DialogVerificationEmail">
        <com.google.android.material.textview.MaterialTextView
            android:text="@string/email_verification_dialog_title"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:padding="8dp"
            style="@style/Theme.CorrectCandidate.AppTitleStyle"
            android:layout_height="wrap_content"/>
        <com.google.android.material.textview.MaterialTextView
            android:text="@string/email_re_verification_prompt"
            android:layout_width="match_parent"
            android:id="@+id/verification_msg"
            android:paddingStart="12dp"
            android:textSize="18sp"
            android:paddingEnd="8dp"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="horizontal"
            android:padding="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/verify_me_btn"
                android:text="@string/verify_me_btn_text"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:textAllCaps="false"
                app:cornerRadius="4dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/ok_button"
                android:text="@string/ok_btn_text"
                style="@style/Widget.MaterialComponents.Button"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:layout_margin="4dp"
                app:cornerRadius="4dp"
                android:layout_weight="1"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>