<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/root"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.dialogs.DialogVerificationEmail">
        <com.google.android.material.textview.MaterialTextView
            android:text="@string/email_verification_dialog_title"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:padding="8dp"
            style="@style/Theme.CorrectCandidate.AppTitleStyle"
            android:layout_height="wrap_content"/>
        <com.google.android.material.textview.MaterialTextView
            tools:text="@string/email_verification_prompt_text"
            android:layout_width="match_parent"
            android:id="@+id/verification_msg"
            android:paddingStart="8dp"
            android:textSize="18sp"
            android:paddingEnd="8dp"
            android:layout_height="wrap_content"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/continue_create_account_btn"
            android:text="@string/continue_btn_text"
            android:textAllCaps="false"
            app:cornerRadius="4dp"
            android:padding="12dp"
            android:layout_weight="1"
            android:textSize="16sp"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>