<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.login.LoginScreen">

        <androidx.appcompat.widget.LinearLayoutCompat
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:layout_marginTop="72dp"
            android:id="@+id/welcome_title_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:text="@string/welcome_text"
                android:id="@+id/welcome_title"
                style="@style/Theme.CorrectCandidate.AppTitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/sign_in_to_continue_text"
                android:id="@+id/welcome_sub_title"
                style="@style/Theme.CorrectCandidate.AppSubTitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome_title_container"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:indeterminate="true"
            android:layout_width="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_height="32dp"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:layout_marginTop="62dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome_title_container"
            app:layout_constraintVertical_bias="0.0"
            android:layout_height="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/username_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorPrimaryVariant"
                    android:textColorHint="?attr/colorPrimaryVariant"
                    app:errorTextColor="?attr/colorPrimary"
                    app:errorIconTint="?attr/colorPrimary"
                    app:errorEnabled="false"
                    app:hintEnabled="false"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:background="@color/grey"
                        android:hint="@string/prompt_email"
                        android:textColorHint="@color/grey_four"
                        android:inputType="textEmailAddress"
                        android:textColor="?attr/colorPrimaryVariant" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.coordinatorlayout.widget.CoordinatorLayout
                    android:id="@+id/password_container_holder"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/username_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/password_container"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:textColor="?attr/colorPrimaryVariant"
                            app:hintEnabled="false"
                            android:textColorHint="?attr/colorPrimaryVariant"
                            app:errorTextColor="?attr/colorPrimaryVariant"
                            app:errorIconTint="?attr/colorPrimary">
                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/password"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:autofillHints=""
                                android:hint="@string/prompt_password"
                                android:textColorHint="@color/grey_four"
                                android:imeActionLabel="@string/action_sign_in_short"
                                android:background="@color/grey"
                                android:textColor="?attr/colorPrimaryVariant"
                                android:maxLength="8"
                                android:imeOptions="actionDone"
                                android:inputType="textPassword" />
                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textview.MaterialTextView
                            tools:drawableStart="@drawable/ic_awaiting_validation"
                            android:id="@+id/password_validator"
                            android:paddingTop="8dp"
                            android:textSize="12sp"
                            android:textStyle="italic"
                            android:layout_gravity="center"
                            android:drawablePadding="4dp"
                            android:text="@string/password_length_prompt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </androidx.appcompat.widget.LinearLayoutCompat>
                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Icon"
                        android:id="@+id/password_visibility_btn"
                        android:background="@android:color/transparent"
                        android:layout_gravity="top|end"
                        android:layout_marginTop="4dp"
                        app:iconTint="@color/color_primary_dark"
                        app:icon="@drawable/ic_password_visibility_on"
                        android:layout_width="48dp"
                        android:layout_height="48dp"/>

                </androidx.coordinatorlayout.widget.CoordinatorLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/sign_in_btn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/password_container_holder"
                    android:text="@string/login_btn_text"
                    android:textSize="18sp"
                    android:layout_marginTop="24dp"
                    android:enabled="false"
                    app:cornerRadius="8dp"
                    tools:enabled="true"
                    android:padding="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:text="@string/forgot_password_btn_text"
                    android:textAllCaps="false"
                    android:padding="0dp"
                    android:textColor="?attr/colorPrimaryVariant"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/sign_in_btn"
                    android:textSize="14sp"
                    android:id="@+id/forgot_password_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintStart_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/forgot_password_btn"
                    android:id="@+id/sign_up_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textColor="@color/grey_two"
                        android:gravity="center_vertical"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:text="@string/not_registered_prompt"/>
                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:text="@string/sign_up_btn_text_two"
                        android:id="@+id/sign_up_btn"
                        android:textAllCaps="false"
                        android:textSize="16sp"
                        android:textColor="?attr/colorPrimaryVariant"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>