<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="userTypeViewModel"
            type="com.thenativecitizens.correctcandidate_recruiter.ui.auth.UserTypeViewModel" />
        <variable
            name="userType"
            type="com.thenativecitizens.correctcandidate_recruiter.util.UserType" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.UserTypeFragment"
        android:id="@+id/root">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/title_container"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingStart="36dp"
            android:paddingEnd="36dp"
            android:paddingTop="24dp"
            android:paddingBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textview.MaterialTextView
                android:text="@string/title_text_who_are_you"
                android:layout_width="wrap_content"
                android:textColor="@color/color_primary"
                android:textStyle="bold"
                style="@style/Theme.CorrectCandidate.AppTitleStyle"
                android:layout_height="wrap_content"/>
            <com.google.android.material.textview.MaterialTextView
                android:textSize="20sp"
                android:text="@string/title_sub_text_who_are_you"
                android:layout_marginStart="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/next_btn_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_container">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/candidate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="36dp"
                    android:layout_marginEnd="36dp"
                    android:layout_marginTop="20dp"
                    android:onClick="@{() -> userTypeViewModel.updateUserType(userType.CANDIDATE)}"
                    app:cardCornerRadius="8dp"
                    tools:cardBackgroundColor="@color/color_secondary">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:padding="8dp"
                            android:id="@+id/candidate_title"
                            android:textColor="@color/grey_four"
                            android:text="@string/candidate_usertype_label"
                            android:textSize="22sp"
                            android:textStyle="bold" />

                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            app:srcCompat="@drawable/ic_candidate" />

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="24dp"
                            android:layout_marginEnd="24dp"
                            android:gravity="center"
                            android:padding="8dp"
                            android:text="@string/candidate_description_text"
                            android:textColor="@color/grey_four"
                            android:textSize="14sp"/>
                    </androidx.appcompat.widget.LinearLayoutCompat>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/recruiter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="36dp"
                    android:layout_marginEnd="36dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="32dp"
                    android:onClick="@{() -> userTypeViewModel.updateUserType(userType.RECRUITER)}"
                    app:cardCornerRadius="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/candidate">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:padding="8dp"
                            android:textColor="@color/grey_four"
                            android:id="@+id/recruiter_title"
                            android:text="@string/recruiter_usertype_label"
                            android:textSize="22sp"
                            android:textStyle="bold" />

                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            app:srcCompat="@drawable/ic_recruiter" />

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="24dp"
                            android:layout_marginEnd="24dp"
                            android:textColor="@color/grey_four"
                            android:gravity="center"
                            android:padding="8dp"
                            android:text="@string/recruiter_description_text"
                            android:textSize="14sp" />
                    </androidx.appcompat.widget.LinearLayoutCompat>
                </com.google.android.material.card.MaterialCardView>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </ScrollView>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/next_btn_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.button.MaterialButton
                android:text="@string/next_btn_text"
                android:padding="16dp"
                android:textSize="20sp"
                android:id="@+id/next_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/progress"
                tools:visibility="visible"
                android:visibility="gone"
                android:indeterminate="true"
                android:layout_gravity="center"
                android:layout_width="32dp"
                android:layout_height="32dp"/>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>